# openmp-benchmarks

./: CMakeLists.txt  README.md
array_init/: CMakeLists.txt
atomic_capture/: CMakeLists.txt
atomic_update/: CMakeLists.txt
saxpy/: CMakeLists.txt
